--- a/templates/view.html
+++ b/templates/view.html
@@ -61,6 +61,12 @@
                     </div>
                     <p class="mb-1">{{ .Claims.ExpiresAt | unix_to_time }} </p>
                 </li>
+                <li class="list-group-item disabled">
+                    <div class="d-flex w-100 justify-content-between">
+                        <h5 class="mb-1">Nonce</h5>
+                    </div>
+                    <p class="mb-1">{{ .Claims.Nonce  }} </p>
+                </li>
             </ul>
         </div>
     </div>
