--- a/templates/view.html
+++ b/templates/view.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/static/css/bootstrap.min.css" type="text/css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T">
 
-    <title>google-jwt-vieiwer</title>
+    <title>id-token-vieiwer</title>
     <style>
         .copy-btn:hover {
             color: #007bff;
@@ -17,7 +17,7 @@
 
 <body>
     <div class="container-fluid mx-auto">
-        <h2>Your Google JWT is below</h2>
+        <h2>Your ID Token JWT is below</h2>
 
         <button class="btn btn-primary border border-secondary rounded" type="button" data-toggle="collapse" data-target="#collapseJWT"
             aria-expanded="false" aria-controls="collapseExample">
